--- a/src/styles/Features.module.css
+++ b/src/styles/Features.module.css
@@ -31,6 +31,7 @@ html {
     font-weight: 400;
     line-height: 78px;
     width: 700px;
+    /* width: 70vw; */
     color: #434343;
     letter-spacing: -0.02em;
   }
@@ -97,8 +98,45 @@ html {
     margin-top: 50px;
   }
 
-  /* @media screen  and (max-width: 480px) {
+  @media screen  and (max-width: 480px) {
       .location {
         flex-direction: column;
+        gap: 100px;
+        margin-left: 20px;
+        margin-right: 20px;
       }
-  } */
+
+      .header {
+        width: 100%;
+        font-size: 4.0rem;
+        line-height: 50px;
+      }
+
+      .txt {
+        width: 100%;
+        font-size: 1.6rem;
+        line-height: 25px;
+      }
+
+      .search {
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      .input {
+        width: 300px;
+      }
+
+      .btn {
+        width: 150px;
+      }
+
+      .logo  {
+        flex-direction: column;
+        gap: 50px;
+      }
+
+      .title {
+        font-size: 3.5rem;
+      }
+  }
