--- a/src/styles/Options.module.css
+++ b/src/styles/Options.module.css
@@ -47,3 +47,42 @@ html {
     font-weight: 400;
     cursor: pointer;
   }
+
+.navDropdown {
+  /* display: flex;
+  justify-content: center; */
+  display: none;
+  margin-top: 100px;
+}
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdownContent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdownContent {
+    display: block;
+  }
+
+  @media screen and (max-width: 1020px) {
+  
+
+.flex {
+  display: none;
+}
+
+    .navDropdown {
+      display: flex;
+      justify-content: center;
+    }
+  }
