--- a/src/styles/Features.module.css
+++ b/src/styles/Features.module.css
@@ -56,13 +56,14 @@ html {
   .input {
     background-color: rgba(247, 247, 247, 0.1);
     border: 1px solid #A3A3A3;
-    border-radius: 8px 8px 8px 8px;
+    border-radius: 8px 0px 8px 0px;
+    padding-left: 10px;
     Width: 390px;
     Height: 54px;
   }
 
   .input:placeholder-shown {
-    padding-left: 10px;
+    /* padding-left: 10px; */
     font-size: 1.4rem;
     font-weight: 400;
   } 
@@ -73,14 +74,14 @@ html {
     border: none;
     Width: 230px;
     Height: 54px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     font-size: 1.6rem;
     font-weight: 400;
     cursor: pointer;
     color: #FFFFFF;
   }
 
-  .logo {
+  .logos {
     display: flex;
     justify-content: space-evenly;
     margin-top: 100px;
@@ -129,14 +130,107 @@ html {
 
       .btn {
         width: 150px;
+        border-radius: 10px;
       }
 
-      .logo  {
-        flex-direction: column;
-        gap: 50px;
+      .logo {
+        width: 100px;
       }
 
       .title {
         font-size: 3.5rem;
+        padding-left: 20px;
+        padding-right: 20px;
       }
+  }
+
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .location {
+      flex-direction: column;
+      gap: 100px;
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+
+    .header {
+      width: 100%;
+      font-size: 4.9rem;
+      line-height: 50px;
+    }
+
+    .txt {
+      width: 100%;
+      font-size: 2.0rem;
+      line-height: 25px;
+    }
+    
+    .logo {
+      width: 120px;
+    }
+
+    .title {
+      font-size: 4.0rem;
+    }
+  }
+
+  @media screen and (min-width: 769px) and (max-width: 1024px) {
+    .location {
+      gap: 30px;
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+
+    .header {
+      width: 100%;
+      font-size: 4.8rem;
+      line-height: 50px;
+    }
+
+    .txt {
+      width: 100%;
+      font-size: 1.8rem;
+      line-height: 25px;
+    }
+
+    .img {
+      width: 100%;
+    }
+
+    .search {
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .input {
+      width: 500px;
+    }
+
+    .btn {
+      width: 200px;
+      border-radius: 10px;
+    }
+  }
+
+  @media screen and (min-width: 1025px) and (max-width: 1200px) {
+    .location {
+      gap: 30px;
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+
+    .header {
+      width: 100%;
+      font-size: 5.4rem; 
+      line-height: 50px;
+    }
+
+    .txt {
+      width: 100%;
+      font-size: 2.0rem;
+      line-height: 30px;
+    }
+
+    .img {
+      width: 150%;
+    }
   }
