--- a/src/styles/Info.module.css
+++ b/src/styles/Info.module.css
@@ -59,7 +59,6 @@ html {
 
   .img {
     width: 40%;
-    /* height: 500px; */
   }
 
   @media screen and (max-width: 480px) {
@@ -77,6 +76,24 @@ html {
     .txt {
       width: 100%;
       font-size: 1.6rem;
+    }
+
+    .img {
+      width: 100%;
+    }
+  }
+
+
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .flex {
+      flex-direction: column;
+      gap: 100px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    .txt {
+      width: 100%;
     }
 
     .img {
