--- a/src/styles/Options.module.css
+++ b/src/styles/Options.module.css
@@ -1,88 +1,107 @@
 html {
-    font-size: 62.5%;
-  }
-  
-  body {
-    font-size: 1.6rem;
-  }
-  
-  *,
-  ::before,
-  ::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  font-size: 62.5%;
+}
 
-  .flex {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 100px;
-  }
+body {
+  font-size: 1.6rem;
+}
 
-  .list {
-    display: flex;
-    list-style-type: none;
-    gap: 30px;
-  }
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .link {
-    color: #434343;
-    font-size: 2.0rem;
-    font-weight: 400;
-    cursor: pointer;
-  }
-
-  .btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border: 1px solid #B4B4B4;
-    Width: 140px;
-    Height: 40px;
-    border-radius: 10px;
-    font-size: 1.6rem;
-    font-weight: 400;
-    cursor: pointer;
-  }
-
-.navDropdown {
-  /* display: flex;
-  justify-content: center; */
-  display: none;
+.flex {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   margin-top: 100px;
 }
 
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdownContent {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-  }
-  
-  .dropdown:hover .dropdownContent {
-    display: block;
-  }
-
-  @media screen and (max-width: 1020px) {
-  
-
-.flex {
-  display: none;
+.list {
+  display: flex;
+  list-style-type: none;
+  gap: 30px;
 }
 
-    .navDropdown {
-      display: flex;
-      justify-content: center;
-    }
+.link {
+  color: #434343;
+  font-size: 2rem;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid #b4b4b4;
+  width: 140px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 1.6rem;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.dropdownBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid #b4b4b4;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 1.6rem;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.navFlex {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 100px;
+}
+
+.navDropdown {
+  display: none;
+  
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdownContent {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  font-size: 2.0rem;
+  line-height: 45px;
+}
+
+.dropdown:hover .dropdownContent {
+  display: block;
+}
+
+@media screen and (max-width: 1024px) {
+  .flex {
+    display: none;
   }
+
+  .navDropdown {
+    display: flex;
+    justify-content: center;
+  }
+
+}
