--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -79,6 +79,49 @@ body {
   cursor: pointer;
 }
 
+.mobileFlex {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  width: 500px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.mobileList {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  list-style-type: none;
+}
+
+.mobilelink {
+  font-size: 2.5rem;
+  color: #434343;
+  font-weight: 400;
+}
+
+.mobilelink:link {
+  text-decoration: none;
+}
+
+.mobileBtn2 {
+  background-image: linear-gradient(90deg, #a02279 11.45%, #a02279 11.45%);
+  color: #ffffff;
+  display: flex;
+  border: none;
+  width: 180px;
+  height: 40px;
+  border-radius: 10px;
+  font-size: 2.0rem;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (max-width: 480px) {
   .nav {
     display: none;
