--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -70,56 +70,20 @@ body {
 
 .mobileNav {
   padding-top: 30px;
+  position: relative;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   display: none;
 }
 
 .mobileBtn {
   cursor: pointer;
+  margin-top: 10px;
 }
 
-.mobileFlex {
-  display: flex;
-  flex-direction: column;
-  background-color: #ffffff;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-  width: 500px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.mobileList {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  list-style-type: none;
-}
-
-.mobilelink {
-  font-size: 2.5rem;
-  color: #434343;
-  font-weight: 400;
-}
-
-.mobilelink:link {
-  text-decoration: none;
-}
-
-.mobileBtn2 {
-  background-image: linear-gradient(90deg, #a02279 11.45%, #a02279 11.45%);
-  color: #ffffff;
-  display: flex;
-  border: none;
-  width: 180px;
-  height: 40px;
-  border-radius: 10px;
-  font-size: 2.0rem;
-  cursor: pointer;
-  justify-content: center;
-  align-items: center;
+.closeBtn {
+  width: 35px;
 }
 
 @media screen and (max-width: 480px) {
@@ -133,7 +97,7 @@ body {
   }
 }
 
-@media screen  and (max-width: 890px) {
+@media screen and (min-width: 481px)  and (max-width: 890px) {
   .nav {
     display: none;
   }
