--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -5,6 +5,7 @@ html {
   body {
     font-size: 1.6rem;
     font-family: 'Red Rose', cursive;
+    /* background-color: rgba(129, 19, 80, 0.2); */
   }
   
   *,
@@ -47,6 +48,16 @@ html {
     border-radius: 30px;
   }
   
+
+  /* @keyframes mobileFlex {
+    0% {
+      transform: scale(0.5);
+    }
+    100% {
+      transform: scale(1);
+    }
+  } */
+
   .mobileList {
     display: flex;
     flex-direction: column;
