--- a/src/styles/Options.module.css
+++ b/src/styles/Options.module.css
@@ -22,9 +22,10 @@ body {
 }
 
 .list {
-  display: flex;
   list-style-type: none;
   gap: 30px;
+  display: flex;
+  overflow-x: auto;
 }
 
 .link {
@@ -32,6 +33,8 @@ body {
   font-size: 2rem;
   font-weight: 400;
   cursor: pointer;
+  flex: 0 0 auto;
+  width: 15%;
 }
 
 .btn {
@@ -45,63 +48,59 @@ body {
   border-radius: 10px;
   font-size: 1.6rem;
   font-weight: 400;
+  padding-left: 10px;
+  padding-right: 10px;
   cursor: pointer;
 }
 
-.dropdownBtn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  border: 1px solid #b4b4b4;
-  width: 200px;
-  height: 40px;
-  border-radius: 10px;
-  font-size: 1.6rem;
-  font-weight: 400;
-  cursor: pointer;
-}
-
-.navFlex {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 100px;
-}
-
-.navDropdown {
-  display: none;
-  
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdownContent {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
-  z-index: 1;
-  font-size: 2.0rem;
-  line-height: 45px;
-}
-
-.dropdown:hover .dropdownContent {
-  display: block;
-}
-
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 550px) {
   .flex {
-    display: none;
+    gap: 20px;
+   margin-left: 10px;
+   margin-right: 10px;
   }
 
-  .navDropdown {
-    display: flex;
-    justify-content: center;
+  .list {
+    margin-top: 20px;
   }
 
+  .link {
+    width: 40%;
+  }
+}
+
+@media screen and (min-width: 551px) and (max-width: 850px ) {
+  .flex {
+    gap: 20px;
+   margin-left: 10px;
+   margin-right: 10px;
+  }
+
+  .link {
+    width: 20%;
+  }
+}
+
+@media screen and (min-width: 851px) and (max-width: 1024px) {
+  .flex {
+    gap: 20px;
+   margin-left: 10px;
+   margin-right: 10px;
+  }
+
+  .link {
+    width: 20%;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  .flex {
+    gap: 20px;
+   margin-left: 10px;
+   margin-right: 10px;
+  }
+
+  .link {
+    width: 20%;
+  }
 }
