--- a/src/styles/Nfts.module.css
+++ b/src/styles/Nfts.module.css
@@ -1,54 +1,62 @@
 html {
-    font-size: 62.5%;
-  }
-  
-  body {
-    font-size: 1.6rem;
-  }
-  
-  *,
-  ::before,
-  ::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  font-size: 62.5%;
+}
 
-  .segmentItem {
-    font-size: 1.0rem;
-    border: 1px solid #D7D7D7;
-    margin-top: 50px;
-    padding: 10px 10px;
-  }
+body {
+  font-size: 1.6rem;
+}
 
-  .segmentImg {
-    width: 260px;
-  }
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .segmentItem1 {
-    display: flex;
-    gap: 20px;
-    margin-top: 5px;
-    margin-left: 10px;
-  }
+.segmentItem {
+  position: relative;
+  font-size: 1.0rem;
+  border: 1px solid #D7D7D7;
+  margin-top: 50px;
+  padding: 10px 10px;
+}
 
-  .segmentItem2 {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
+.segmentImg {
+  width: 260px;
+}
 
-  .segmentItem3 {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    text-align: center;
-  }
+.segmentIcon {
+  position: absolute;
+  right: 25px;
+  top: 20px;
+  cursor: pointer;
+}
 
-  .props {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: flex-stretch;
-    margin-bottom: 100px;
-  }
+.segmentItem1 {
+  display: flex;
+  gap: 20px;
+  margin-top: 5px;
+  margin-left: 10px;
+}
+
+.segmentItem2 {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.segmentItem3 {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  text-align: center;
+}
+
+.props {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: flex-stretch;
+  margin-bottom: 100px;
+}
