--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -1,124 +1,130 @@
 html {
-    font-size: 62.5%;
-  }
-  
-  body {
-    font-size: 1.6rem;
-    font-family: 'Red Rose', cursive;
-    /* background-color: rgba(129, 19, 80, 0.2); */
-  }
-  
-  *,
-  ::before,
-  ::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: 'Red Rose', cursive;
+  /* background-color: rgba(129, 19, 80, 0.2); */
+}
+
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.display {
+  display: none;
+}
+
+/* .active {
+    display: none;
+  } */
+
+.closeBtn {
+  cursor: pointer;
+  width: 30px;
+}
+
+.mobileFlex {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  background-color: #ffffff;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  width: 300px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  left: 1%;
+  right: 1%;
+  top: 10%;
+  opacity: 0.9;
+  border: 1px solid #811350;
+  border-radius: 30px;
+  z-index: 1;
+}
+
+.display.fade-in {
+  display: block;
+  animation: fadeIn 0.5s ease-in;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
 
+  to {
+    opacity: 1;
+  }
+}
+
+.mobileList {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  list-style-type: none;
+}
+
+.mobilelink {
+  font-size: 2.5rem;
+  color: #434343;
+  font-weight: 400;
+}
+
+.mobilelink:hover {
+  color: #91185a;
+}
+
+.mobilelink:link {
+  text-decoration: none;
+}
+
+.mobileBtn2 {
+  background-image: linear-gradient(90deg, #a02279 11.45%, #a02279 11.45%);
+  color: #ffffff;
+  display: flex;
+  border: none;
+  width: 180px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 2.0rem;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 480px) {
   .display {
     display: none;
   }
 
-  /* .active {
-    display: none;
-  } */
-  
-  .closeBtn {
-    cursor: pointer;
-    width: 30px;
+  .active {
+    display: block;
   }
 
   .mobileFlex {
-    display: flex;
-    position: absolute;
-    flex-direction: column;
-    background-color: #ffffff;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    width: 300px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    left: 1%;
-    right: 1%;
-    top: 10%;
-    opacity: 0.9;
-    border: 1px solid #811350;
-    border-radius: 30px;
+    margin-left: auto;
+    margin-right: auto;
   }
-  
+}
 
-  /* @keyframes mobileFlex {
-    0% {
-      transform: scale(0.5);
-    }
-    100% {
-      transform: scale(1);
-    }
-  } */
-
-  .mobileList {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    list-style-type: none;
-  }
-  
-  .mobilelink {
-    font-size: 2.5rem;
-    color: #434343;
-    font-weight: 400;
-  }
-  
-  .mobilelink:hover {
-    color: #91185a;
-  }
-  
-  .mobilelink:link {
-    text-decoration: none;
-  }
-  
-  .mobileBtn2 {
-    background-image: linear-gradient(90deg, #a02279 11.45%, #a02279 11.45%);
-    color: #ffffff;
-    display: flex;
-    border: none;
-    width: 180px;
-    height: 50px;
-    border-radius: 10px;
-    font-size: 2.0rem;
-    cursor: pointer;
-    justify-content: center;
-    align-items: center;
+@media screen and (min-width: 481px) and (max-width: 890px) {
+  .display {
+    display: none;
   }
 
-  @media screen and (max-width: 480px) {
-    .display {
-        display: none;
-      }
-
-      .active {
-        display: block;
-      }
-
-      .mobileFlex {
-        margin-left: auto;
-        margin-right: auto;
-       }
+  .active {
+    display: block;
   }
 
-  @media screen and (min-width: 481px)  and (max-width: 890px) {
-    .display {
-        display: none;
-      }
-
-      .active {
-        display: block;
-      }
-
-      .mobileFlex {
-       margin-left: auto;
-       margin-right: auto;
-      }
+  .mobileFlex {
+    margin-left: auto;
+    margin-right: auto;
   }
+}
