New NavLink feature
Used the NavLink in React-router-dom to give the navbar and mobile navbar a good look because of it's active class and changed from the Link feature that was originally there.

--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -75,14 +75,17 @@ body {
   font-size: 2.5rem;
   color: #434343;
   font-weight: 400;
+  text-decoration: none;
 }
 
 .mobilelink:hover {
   color: #91185a;
 }
 
-.mobilelink:link {
-  text-decoration: none;
+.activelink {
+  color: #91185a;
+  font-size: 3.0rem;
+  text-decoration: overline;
 }
 
 .mobileBtn2 {
